--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,50 @@
-<h1>Hello, Rails!</h1>
-<div class="alert alert-danger" role="alert">
-  A simple danger alert—check it out!
-</div>
+
+<div class="container-fluid">
+
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center">Flags</h1>
+      <ul class="list-group text-center">
+        <li class="list-group-item">No SAT test taken</li>
+        <li class="list-group-item">Low grades</li>
+        <li class="list-group-item">Skipping school</li>
+      </ul>
+    </div>
+
+
+    <div class="col">
+      <h1 class="text-center">Jose Murillo's Info</h1>
+      <form>
+        <% grade = 10
+        if grade >10
+
+
+          %>
+          <h2>College Going Info</h2>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="sat_math_score">SAT Math Score</label>
+              <input type="number" min="0" max="800" step="1" class="form-control" id="sat_math_score">
+            </div>
+
+            <div class="form-group col-md-6">
+              <label for="sat_reading_score">SAT Reading Score</label>
+              <input type="number" min="0" max="800" step="1" class="form-control" id="sat_reading_score">
+            </div>
+
+            <div class="form-group col-md-6">
+              <label for="act_score">ACT Composite Score</label>
+              <input type="number" min="0" max="36" step="1" class="form-control" id="act_score">
+            </div>
+
+
+          </div>
+          <% end %>
+
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+
+
+    </div>
+  </div>
