--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 
   <div class="row">
-    <div class="col">
+    <div class="col-md-6">
       <h1 class="text-center">Flags</h1>
       <ul class="list-group text-center">
         <li class="list-group-item">No SAT test taken</li>
