--- a/app/views/partial/_user_info_form.html.erb
+++ b/app/views/partial/_user_info_form.html.erb
@@ -1,5 +1,5 @@
 <div class="col">
-  <h1 class="text-center">Jose Murillo's Info</h1>
+  <h1 class="text-center"><%= @member.first_name %>'s Info</h1>
   <form>
     <h2> Personal Information</h2>
     <div class="form-row">
@@ -9,14 +9,14 @@
       </div>
     </div>
 
-    <% grade = 11
-    if grade >10 %>
+    <% grade = @member.grade
+    if grade >9 %>
 
     <h2>College Going Info</h2>
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="sat_math_score">SAT Math Score</label>
-        <input type="number" min="0" max="800" step="1" class="form-control" id="sat_math_score">
+        <input type="number" min="0" max="800" step="1" class="form-control" id="sat_math_score" value= <%=@member.sat_score  %>>
       </div>
 
       <div class="form-group col-md-6">
