--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,9 +5,9 @@
     <div class="col-md-6">
       <h1 class="text-center">Flags</h1>
       <ul class="list-group text-center">
-        <li class="list-group-item">No SAT test taken</li>
-        <li class="list-group-item">Low grades</li>
-        <li class="list-group-item">Skipping school</li>
+        <% @flags.each do |i| %>
+        <li><%= i.flag_info.flag_name %>  </li>
+        <% end %>
       </ul>
     </div>
 
