--- a/app/views/partial/_user_info_form.html.erb
+++ b/app/views/partial/_user_info_form.html.erb
@@ -1,8 +1,15 @@
 <div class="col">
   <h1 class="text-center"><%= @member.first_name %>'s Info</h1>
 
+
+  <%= simple_form_for @member,url: welcome_index_path do |f| %>
+  <%= f.input :first_name %>
+  <%= f.input :last_name %>
+  <%= f.button :submit %>
+  <% end %>
   <form>
     <h2> College Going Data Points</h2>
+
 
   </form>
 </div>
