Fixed styling on solution and risk page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,10 @@
     <style>
     body {
           font-family: 'Arimo', sans-serif;
-         }
+          background-color:#fafafa;
+        };
+  .top-buffer { margin-top:20px; }
+
          </style>
   </head>
 
