--- a/app/views/welcome/solution_page.html.erb
+++ b/app/views/welcome/solution_page.html.erb
@@ -1,16 +1,27 @@
-<h1> Solution Name (Example: Take the SAT!) </h1>
-<p>
-   Risk description
-</p>
-<button> Implement </button>
-
- When Implement is hit, there is a series of events that happen such as
-
- <ol>
-   <li>
-    Momentary pause on flag
-   </li>
-   <li>
-     Future reminders and tasks assigned that need to be accomplished
-   </li>
- </ol>
+<div class="container-fluid">
+  <div class="row">
+    <div class="offset-3 col-md-6">
+      <h1 class="text-center"> <strong>Take the SAT!</strong> </h1>
+      <p>
+        Jose should take the SAT. Sign up for the next SAT test and take it.
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="offset-3 col-md-6 text-center">
+      <div class="btn-group-vertical">
+        <a type="button" class="btn btn-success" href="/welcome/risk"> Implement!</a>
+        <a type="button" class="btn btn-warning" href="/welcome/risk"> Stop Implementation!</a>
+        <a type="button" class="btn btn-danger" href="/welcome/risk"> Go back!</a>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="offset-3 col-sm-6">
+      <h2 class='text-center top-buffer'> <strong>Notes</strong></h2>
+      <div class="alert alert-info">
+        Write notes below to help you remember essential things. Best of luck!
+      </div>
+    </div>
+  </div>
+</div>
