--- a/app/views/welcome/risk_page.html.erb
+++ b/app/views/welcome/risk_page.html.erb
@@ -1,25 +1,25 @@
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-md-offset-2 col-md-8">
-      <h1 class="text-center"> Jose Murillo is missing SAT test </h1>
+    <div class="offset-3 col-md-6">
+      <h1 class="text-center"> <strong>Current Issue:</strong> Jose Murillo is missing SAT test </h1>
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-offset-2 col-sm-8">
+    <div class="offset-3 col-sm-6">
       <p>
-        Risk description
+      The SAT is required for all the UCs and a variety of CSUs. Jose needs to take it in order to go to college.
       </p>
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-offset-2 col-sm-8">
-      <h2 class="text-center">
-        Possible Solutions
+    <div class="offset-3 col-sm-6">
+      <h2 class="text-center top-buffer">
+        <strong>Possible Solutions</strong>
       </h2>
       <div class="btn-group-vertical">
-        <button type="button" class="btn btn-success">Success is the key to more success</button>
-        <button type="button" class="btn btn-success">Success</button>
+        <a type="button" class="btn btn-success" href="/welcome/solution">Have Jose take the next SAT on June 19.</a>
+
       </div>
 
 
@@ -27,8 +27,11 @@
 
   </div>
   <div class="row">
-    <div class="col-sm-offset-2 col-sm-8">
-      <h2 class='text-center'> Notes</h2>
+    <div class="offset-3 col-sm-6">
+      <h2 class='text-center top-buffer'> <strong>Notes</strong></h2>
+      <div class="alert alert-info">
+        Write notes below to help you remember essential things. Best of luck!
+      </div>
     </div>
   </div>
 </div>
