--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-md-6">
-      <h1 class="text-center">Flags</h1>
+      <h1 class="text-center">Current Risks</h1>
       <ul class="list-group text-center">
         <% @flags.each do |i| %>
         <li><%= i.flag_info.flag_name %>  </li>
