--- a/app/views/welcome/risk_page.html.erb
+++ b/app/views/welcome/risk_page.html.erb
@@ -2,13 +2,13 @@
 <div class="container-fluid">
   <div class="row">
     <div class="offset-3 col-md-6">
-      <h1 class="text-center"> <strong>Current Issue:</strong> Jose Murillo is missing SAT test </h1>
+      <h1 class="text-center"> <strong>Current Issue:</strong> <br /> Reading below grade level! </h1>
     </div>
   </div>
   <div class="row">
     <div class="offset-3 col-sm-6">
       <p>
-      The SAT is required for all the UCs and a variety of CSUs. Jose needs to take it in order to go to college.
+      The student is reading below grade level.
       </p>
     </div>
   </div>
@@ -18,7 +18,7 @@
         <strong>Possible Solutions</strong>
       </h2>
       <div class="btn-group-vertical">
-        <a type="button" class="btn btn-success" href="/welcome/solution">Have Jose take the next SAT on June 19.</a>
+        <a type="button" class="btn btn-success" href="/welcome/solution"> Enroll in Amigo's Reader Leaders program.</a>
 
       </div>
 
