--- a/app/views/welcome/solution_page.html.erb
+++ b/app/views/welcome/solution_page.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="row">
     <div class="offset-3 col-md-6">
-      <h1 class="text-center"> <strong>Take the SAT!</strong> </h1>
+      <h1 class="text-center"> <strong>Enroll in Amigo's Reader Leader program</strong> </h1>
       <p>
-        Jose should take the SAT. Sign up for the next SAT test and take it.
+        Amigos de Guadalupe has an afterschool program called ReaderLeader which helps students improve their reading level.
       </p>
     </div>
   </div>
@@ -14,6 +14,24 @@
         <a type="button" class="btn btn-warning" href="/welcome/risk"> Stop Implementation!</a>
         <a type="button" class="btn btn-danger" href="/welcome/risk"> Go back!</a>
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="offset-3 col-sm-6">
+      <h2 class="text-center"> <strong>Steps</strong></h2>
+      <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+      <label class="form-check-label" for="defaultCheck1">
+        Contact parents and explain the ReaderLeader program to them by July 10, 2018
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+      <label class="form-check-label" for="defaultCheck1">
+         Parents fill out Amigos form and submit it to the office by July 17, 2018
+      </label>
+    </div>
+
     </div>
   </div>
   <div class="row">
